feat: added user module components

--- a/src/components/generic/validation-tooltip/ValidationTooltip.scss
+++ b/src/components/generic/validation-tooltip/ValidationTooltip.scss
@@ -1,4 +1,4 @@
-@import 'renderer/styles/Constants.style.scss';
+@import '../../../styles/Constants.style.scss';
 
 .error_message_popup_container {
   position: relative;
