--- a/src/components/login/change-password-confirmation/ChangePasswordConfirmation.scss
+++ b/src/components/login/change-password-confirmation/ChangePasswordConfirmation.scss
@@ -1,4 +1,4 @@
-@import 'renderer/styles/Constants.style.scss';
+@import '../../../styles/Constants.style.scss';
 
 .change_password_confirm_container {
   margin-top: 32px;
