--- a/src/components/login/login-card/LoginCard.scss
+++ b/src/components/login/login-card/LoginCard.scss
@@ -1,4 +1,4 @@
-@import 'renderer/styles/Constants.style.scss';
+@import '../../../styles//Constants.style.scss';
 
 .login_card_container {
   margin-top: 32px;
