--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-ExtraLight.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-ExtraLight.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 300;
   font-style: normal;
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-ExtraLightItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-ExtraLightItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 300;
   font-style: italic;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Light.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Light.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 400;
   font-style: normal;
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-LightItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-LightItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 400;
   font-style: italic;
@@ -36,7 +36,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Regular.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 500;
   font-style: normal;
@@ -44,7 +44,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Italic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Italic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 500;
   font-style: italic;
@@ -52,7 +52,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Medium.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: normal;
   font-style: normal;
@@ -60,7 +60,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-SemiBold.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-SemiBold.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 600;
   font-style: normal;
@@ -68,7 +68,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-SemiBoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-SemiBoldItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 600;
   font-style: italic;
@@ -76,7 +76,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Bold.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 700;
   font-style: normal;
@@ -84,7 +84,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-BoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-BoldItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 700;
   font-style: italic;
@@ -92,7 +92,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-ExtraBold.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-ExtraBold.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 800;
   font-style: normal;
@@ -100,7 +100,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-ExtraBoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-ExtraBoldItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 800;
   font-style: italic;
@@ -108,7 +108,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-Black.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-Black.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 900;
   font-style: normal;
@@ -116,7 +116,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/Nunito-BlackItalic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/Nunito-BlackItalic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 900;
   font-style: italic;
@@ -124,7 +124,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/NunitoHeavy-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/NunitoHeavy-Regular.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 1000;
   font-style: normal;
@@ -132,7 +132,7 @@
 
 @font-face {
   font-family: Nunito;
-  src: url('assets/fonts/nunito/NunitoHeavy-Italic.ttf') format('truetype');
+  src: url('../assets/fonts/nunito/NunitoHeavy-Italic.ttf') format('truetype');
   /* Safari, Chrome, Firefox, Android, iOS */
   font-weight: 1000;
   font-style: italic;
