--- a/src/components/login/forgot-password-confirmation/ForgotPasswordConfirmation.scss
+++ b/src/components/login/forgot-password-confirmation/ForgotPasswordConfirmation.scss
@@ -1,4 +1,4 @@
-@import 'renderer/styles/Constants.style.scss';
+@import '../../../styles/Constants.style.scss';
 
 .forgot_password_confirm_container {
   margin-top: 32px;
