--- a/src/App.scss
+++ b/src/App.scss
@@ -3,28 +3,26 @@
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
 
- @import './styles/Constants.style.scss';
- @import './styles//Fonts.scss';
- @import './styles//Global.style.scss';
- 
- body {
-   position: relative;
-   color: $color-black;
-   height: 100vh;
-   background-image: url('../src/assets/images/login_bg.png');
-   margin: 0;
-   background-size: cover;
-   font-family: $font-family;
-   font-weight: $font-weight;
-   overflow-y: hidden;
-   display: block;
-   margin: 0;
-   justify-content: center;
-   align-items: center;
-   -webkit-user-select: none;
-   -khtml-user-select: none;
-   -moz-user-select: none;
-   -o-user-select: none;
-   user-select: none;
- }
- 
+@import './styles/Constants.style.scss';
+@import './styles//Fonts.scss';
+@import './styles//Global.style.scss';
+
+body {
+  position: relative;
+  color: $color-black;
+  background-image: url('../src/assets/images/teaching_guide_bg.svg');
+  margin: 0;
+  background-size: cover;
+  font-family: $font-family;
+  font-weight: $font-weight;
+  overflow-y: hidden;
+  display: block;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
