--- a/src/styles/Constants.style.scss
+++ b/src/styles/Constants.style.scss
@@ -19,6 +19,7 @@ $font-weight-heavy: 1000;
 $color-white: #fff;
 $color-black: #000;
 $color-yellow: #ffcd50;
+$color-blue:#016FFF;
 $color-light-purple: #84288e;
 $font-size-footer: 12pt;
 $font-size-footer-btn: 15pt;
